# glint

./: .gitignore  CMakeLists.txt
include/glint/: crawler.h  database.h  file_info.h  index_builder.h  search_engine.h  text_extractor.h  tokenizer.h
src/: crawler.cpp  database.cpp  index_builder.cpp  main.cpp  search_engine.cpp  text_extractor.cpp  tokenizer.cpp
